# knowflow

./: .dockerignore  .env.example  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-ecs.yml  pylint.yml
docker/: Dockerfile.backend  Dockerfile.neo4j  docker-compose.yml
docs/: AI-ARCHITECTURE.md  API.md  DEPLOYMENT.md  DOCKER.md  FLOWCHART.md  PRD.md
docs/context/: PGVECTOR.md
ecs/: task-definition.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  theme.js
frontend/src/api/: client.js
frontend/src/components/: DocumentSelector.jsx  Layout.jsx
frontend/src/pages/: Chat.jsx  Documents.jsx  Login.jsx  Register.jsx
frontend/src/store/: authStore.js  chatStore.js  documentStore.js
infra/: knowflow_stack.py
src/: main.py
src/core/: auth.py  config.py  database.py  exceptions.py  logging.py  middleware.py
src/models/: database.py  graph.py  request.py  response.py
src/routes/: admin_routes.py  auth_routes.py  chat_routes.py  document_routes.py  graph_routes.py  search_routes.py  session_routes.py
src/services/: admin_service.py  auth_service.py  base_client.py  chat_service.py  document_service.py  graph_service.py  s3_service.py  session_service.py  storage_service.py
src/services/admin/: admin_service.py
src/services/chat/: base_service.py  chat_service.py  query_decomposition.py  retrieval_evaluation.py
src/utils/: utils.py
tests/: conftest.py
tests/services/: test_auth_service.py  test_base_client.py  test_chat_service.py  test_document_service.py  test_query_decomposition.py  test_retrieval_evaluation.py  test_s3_service.py  test_session_service.py
